--- a/suika/index.html
+++ b/suika/index.html
@@ -8,5 +8,6 @@
 <body>
     <script src="/suika/matter.js"></script>
     <script type="module" src="/suika/main.js"></script>
+    <script type="module" src="/suika/fruits.js"></script>
 </body>
 </html>
